# Lemonade-Wyoming

./: .gitignore  CHANGELOG.md  README.md  config.yaml  repository.yaml
custom_components/lemonade_ha/: __init__.py  client.py  config_flow.py  const.py  conversation.py  manifest.json  stt.py  tts.py
custom_components/lemonade_ha/translations/: en.json
lemonade-wyoming/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  pyproject.toml  requirements.txt
lemonade-wyoming/custom_components/lemonade_wyoming/: __init__.py  client.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json  stt.py  tts.py
lemonade-wyoming/rootfs/etc/s6-overlay/s6-rc.d/lemonade-wyoming/: run
lemonade-wyoming/translations/: en.yaml
lemonade-wyoming/wyoming_lemonade/: __init__.py  __main__.py  const.py  lemonade_client.py  llm_handler.py  models.py  server.py  stt_handler.py  tts_handler.py
rootfs/etc/s6-overlay/s6-rc.d/lemonade-ha/: run
